--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 捷克-1.03MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇬🇧 英国-1.31MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-388.7KB/s(Youtube:不良林), server: in-tw-1.iivvppnn.info, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-1.iivvppnn.info}}
-  - {name: 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇯🇵 日本-459.2KB/s(Youtube:不良林), server: 5.183.176.96, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-650.9KB/s(Youtube:不良林), server: 5.183.176.94, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-555.5KB/s(Youtube:不良林), server: 5.183.176.96, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-602.1KB/s(Youtube:不良林), server: 5.183.176.94, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-11.97MB/s(Youtube:不良林), server: 20.24.91.135, port: 12339, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-568.7KB/s(Youtube:不良林), server: 5.183.176.93, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-567.0KB/s(Youtube:不良林), server: 5.183.176.93, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-168.6KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-3.84MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.47MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 捷克-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 捷克-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 捷克-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 捷克-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 捷克-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 捷克-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
-      - 捷克-1.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
