--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-568.7KB/s(Youtube:不良林), server: 5.183.176.93, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-567.0KB/s(Youtube:不良林), server: 5.183.176.93, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-168.6KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-3.84MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.47MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-909.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-663.4KB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 捷克-1.06MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇯🇵 日本-650.9KB/s(Youtube:不良林), server: 5.183.176.94, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-703.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-721.1KB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-663.4KB/s(Youtube:不良林)
+      - 捷克-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-703.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-663.4KB/s(Youtube:不良林)
+      - 捷克-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-703.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-663.4KB/s(Youtube:不良林)
+      - 捷克-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-703.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-663.4KB/s(Youtube:不良林)
+      - 捷克-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-703.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-663.4KB/s(Youtube:不良林)
+      - 捷克-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-703.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-663.4KB/s(Youtube:不良林)
+      - 捷克-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-703.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-568.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-567.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活1天)香港-3.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-168.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-663.4KB/s(Youtube:不良林)
+      - 捷克-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-703.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-721.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
